[package]
name = "dialetto"
version = "0.1.0"
edition = "2018"

description = "Language detection"
homepage = "https://github.com/cjrh/dialetto"
repository = "https://github.com/cjrh/dialetto"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["language"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
